8245470: Fix JDK8 compatibility issues
Reviewed-by: mbalao